add some configs to deploy

--- a/views/createplant.ejs
+++ b/views/createplant.ejs
@@ -73,9 +73,9 @@
 
         <div class="card shadow-sm create-plant__data col-md-6">
           <div class="card-body">
-              <input id='disabled-input' name='img'  class="form-control" type="text" placeholder="Image Url" aria-label="Disabled input example" required />
+              <input id='disabled-input' name='img'  class="form-control" type="text" placeholder="Image Url" aria-label="Disabled input example"  required />
               <div class="invalid-feedback">
-                Please search and select an image.
+                Please search and select an image or upload a new one.
               </div>
               <div class="input-group my-3">
                 <span class="input-group-text">Name</span>
@@ -187,6 +187,6 @@
     <script src="scripts/datepicker.js"></script>
     <script src="scripts/search.js"></script>
     <script src="scripts/validate.js"></script>
-  
+    <script src="scripts/removeRequired.js"></script>
   </body>
 </html>
