--- a/views/editplant.ejs
+++ b/views/editplant.ejs
@@ -75,7 +75,7 @@
           <div class="card-body">
               <input id='disabled-input' name='img'  class="form-control mb-3" type="text" placeholder="Image Url" aria-label="Disabled input example" value='<%= plant.img %>' required>
               <div class="invalid-feedback">
-                Please search and select an image.
+                Please search and select an image or upload a new one.
               </div>
               <div class="input-group mb-3">
                 <span class="input-group-text">Name</span>
@@ -191,6 +191,7 @@
     <script src="/scripts/search.js"></script>
     <script src="/scripts/utils.js"></script>
     <script src="/scripts/validate.js"></script>
+    <script src="scripts/removeRequired.js"></script>
   </body>
 </html>
 
