--- a/views/editplant.ejs
+++ b/views/editplant.ejs
@@ -191,7 +191,7 @@
     <script src="/scripts/search.js"></script>
     <script src="/scripts/utils.js"></script>
     <script src="/scripts/validate.js"></script>
-    <script src="scripts/removeRequired.js"></script>
+    <script src="/scripts/removeRequired.js"></script>
   </body>
 </html>
 
