--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,22 @@
   <body>
     <img class="img-fluid home-img" src="images/home.png" alt="plants life home image" />
     <div class="container pb-5 plants-home min-vh-100">
+      <% if(!currentUser){ %>
+      <div class="d-flex justify-content-center pt-5">
+        <div class="col-4 btn-group" role="group">
+          <a href="/login" class="btn btn-outline-primary">Login</a>
+          <a href="/register" class="btn btn-outline-success">Register</a>
+        </div>
+      </div>
+      <% } else { %>
+      <div class="d-flex justify-content-center pt-5">
+        <div class="col-4 btn-group" role="group">
+          <a href="/profile" class="btn btn-outline-dark text-capitalize"><%= currentUser.username %></a>
+          <a class="btn btn-outline-danger" href="/logout">Logout</a>
+        </div>
+      </div>
+      <% } %>
+
       <div class="search-create py-5 d-grid gap-2 col-md-4 mx-auto">
         <form class="d-flex" action="/search">
           <input
@@ -103,6 +119,7 @@
                 </div>
               </div>
             </div>
+            <% if(currentUser && plant.author.equals(currentUser._id)) { %>
             <div class="card-body btn-group">
               <a role="button" href="/edit-plant/<%= plant.id%>" class="btn btn-outline-dark text-capitalize mb-2">Edit Plant</a>
               <button
@@ -114,7 +131,9 @@
                 Delete
               </button>
             </div>
+            <% } %>
           </form>
+          <div class="card-footer text-muted">By <span class="fw-bold text-capitalize"><%= plant.author.username %></span></div>
         </div>
         <% }) %>
       </div>
