--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,12 +11,18 @@
     <title>Plants Life</title>
   </head>
   <body>
-    <img class="img-fluid home-img" src="images/home.png" alt="plants life home image" />
+    <a href="/" class='header-link' >
+        <div class="d-flex justify-content-center align-items-center create-plant__header">
+          <h1 class="text-uppercase">Plants Life</h1>
+        </div>
+      </a>
     <div class="container plants-home min-vh-100">
-      <div class="d-flex align-items-center flex-column my-5">
         <%- include("partials/flash.ejs") %>
-          <h1 class="bg-light text-dark p-4 rounded-pill mb-5 shadow">Login</h1>
-          <div class="card col-12 col-lg-4 shadow">
+      <div class="d-flex align-items-center flex-column mt-5">
+          <div class="card col-12 col-lg-4 shadow-sm">
+              <div class="card-body">
+                  <div class="card-text text-center"><h1>Login</h1></div>
+              </div>
             <div class="card-body">
               <form action="/user/login" method="POST" style="border-radius: 20px">
                 <div class="mb-3">
