--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,6 +1,6 @@
 <% if(success && success.length) { %>
 <div class="d-md-flex justify-content-center">
-  <div class="alert success-msg alert-success alert-dismissible fade show col-md-6 mb-0" role="alert">
+  <div class="alert success-msg alert-success alert-dismissible fade show col-md-6 mb-5" role="alert">
     <%= success %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
@@ -8,7 +8,7 @@
 
 <% } %> <% if(error && error.length) { %>
 <div class="d-flex justify-content-center">
-  <div class="alert error-msg alert-danger alert-dismissible fade show" role="alert">
+  <div class="alert error-msg alert-danger alert-dismissible fade show mt-5" role="alert">
     <%= error %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
