--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
                   <div class="card-text text-center"><h1>Login</h1></div>
               </div>
             <div class="card-body">
-              <form action="/user/login" method="POST" style="border-radius: 20px">
+              <form action="/login" method="POST">
                 <div class="mb-3">
                   <label class="form-label" for="username">Username</label>
                   <input class="form-control" type="text" id="username" name="username" required />
