--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
       </div>
       <% if(currentUser){ %>
       <form action="/user/<%= currentUser._id %>" method="post">
-        <div class="d-flex justify-content-center pb-4">
+        <div class="d-flex justify-content-center">
           <div class="col-md-4 col btn-group" role="group">
             <a role="button" href="/logout" class="btn btn-outline-dark">Logout</a>
             <button
