--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,6 +42,9 @@
         <div class="d-flex justify-content-center mt-4">
           <div class="col-md-4 col btn-group" role="group">
             <a role="button" href="/logout" class="btn btn-outline-dark">Logout</a>
+            <div class="d-flex justify-content-center align-items-center px-4 border-top border-bottom">
+              <span  class="text-capitalize"><%= currentUser.username %> </span>
+            </div>
             <button
               class="btn btn-outline-danger"
               type="button"
