--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,6 +32,7 @@
             placeholder="&#xF002;"
             aria-label="Search"
             name="name"
+            required
           />
           <button class="btn btn-outline-success search-btn" type="submit">Search</button>
         </form>
@@ -42,7 +43,7 @@
         <div class="d-flex justify-content-center mt-4">
           <div class="col-md-4 col btn-group" role="group">
             <a role="button" href="/logout" class="btn btn-outline-dark">Logout</a>
-            <div class="d-flex justify-content-center align-items-center px-4 border-top border-bottom">
+            <div class="d-flex justify-content-center align-items-center px-3 mx-2">
               <span  class="text-capitalize"><%= currentUser.username %> </span>
             </div>
             <button
