--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -8,7 +8,7 @@
 
 <% } %> <% if(error && error.length) { %>
 <div class="d-flex justify-content-center">
-  <div class="alert error-msg alert-danger alert-dismissible fade show mt-5" role="alert">
+  <div class="alert error-msg alert-danger alert-dismissible fade show mb-5" role="alert">
     <%= error %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
