--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
           <div class="col-md-4 col btn-group" role="group">
             <a role="button" href="/logout" class="btn btn-outline-dark">Logout</a>
             <div class="d-flex justify-content-center align-items-center px-3 mx-2">
-              <span  class="text-capitalize"><%= currentUser.username %> </span>
+              <span  class="text-capitalize">Hi <%= currentUser.username %>!</span>
             </div>
             <button
               class="btn btn-outline-danger"
